Removed arrow from phone number input & round scrollbar fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,28 +18,6 @@ a {
   text-decoration: underline;
 }
 
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: #d6d6d6 #ffffff;
-}
-
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 16px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #d6d6d6;
-  border-radius: 10px;
-  border: 3px solid #ffffff;
-}
-
 /* Custom Buttons */
 .btn-simple {
   @apply flex;
